# keyboard_helper

./: .gitignore  README.md  RELEASE_NOTES.md  keyri.example.json  package-lock.json  package.json
.github/workflows/: deploy-website.yml  tauri-release.yml
keyboard_helper/: index.html
keyboard_helper/setup/: index.html
openspec/: project.md
openspec/changes/add-ci-release-builds/: proposal.md  tasks.md
openspec/changes/add-combo-keys/: proposal.md  tasks.md
openspec/changes/add-external-layout-refresh/: tasks.md
openspec/changes/add-hide-to-tray/: tasks.md
openspec/changes/add-multi-layer-legends/: proposal.md  tasks.md
openspec/changes/add-release-publishing/: proposal.md  tasks.md
openspec/changes/add-tilted-key-rendering/: proposal.md  tasks.md
openspec/changes/add-windowless-mode-toggle/: proposal.md  tasks.md
openspec/specs/combo-keys/: spec.md
openspec/specs/external-layout-refresh/: spec.md
openspec/specs/hide-window-to-tray/: spec.md
src/: ble_layer_sync.js  index.html  key_highlight.js  layout_corne.js  layout_corne.json  layout_dactyl.js  layout_dactyl.json  layout_mac.js  layout_mac.json  layout_magic.js  layout_magic.json  layout_qwert.js  layout_qwerty.json  layout_qwertz.js  layout_qwertz.json  main.js  menu.css  menu.js  styles.css  window_mode.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: ble_layer_macos.rs  ble_layer_sync.rs  main.rs
tests/: ble_layer_sync.test.mjs  key_highlight.test.mjs  window_mode.test.mjs
website/: astro.config.mjs  package-lock.json  package.json
website/src/layouts/: Layout.astro
website/src/pages/: index.astro  setup.astro
(+13 files in other folders)
