[package]
name = "keyboard-app"
version = "0.2.4"
description = "A Keyboard App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
btleplug = "0.12"
futures-util = "0.3"
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = "1"

# Vendored rdev with macOS key-name lookup disabled to avoid macOS 15 event tap crash
rdev = { path = "vendor/rdev" }

[target.'cfg(target_vendor = "apple")'.dependencies]
objc2 = "0.5.2"

[target.'cfg(target_vendor = "apple")'.dependencies.objc2-core-bluetooth]
version = "0.2.2"
features = [
  "std",
  "CBAttribute",
  "CBCentralManager",
  "CBCharacteristic",
  "CBManager",
  "CBPeer",
  "CBPeripheral",
  "CBService",
  "CBUUID"
]
default-features = false

[target.'cfg(target_vendor = "apple")'.dependencies.objc2-foundation]
version = "0.2.2"
features = [
  "std",
  "NSArray",
  "NSData",
  "NSError",
  "NSObject",
  "NSString",
  "NSUUID"
]
default-features = false
